--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ config = "0.14.0"
 # HTTP server library
 hyper = "1.2.0"
 # Routing library
+redis = "0.24.0"
 routerify = "3.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
