--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,22 @@ authors = ["Rhaqim <anusiemj@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "ussdframework"
+path = "src/lib.rs"
+crate-type = ["lib"]
+
+
+# [workspace]
+# members = [
+#     "src",
+#     "examples",
+# ]
+
 [dependencies]
-# Templating library
-askama = "0.12.1"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.14.0"
-# HTTP server library
-hyper = "1.2.0"
-# Routing library
-redis = "0.24.0"
-routerify = "3.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+ussdframework = { path = "src" }
