--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,4 @@ config = "0.14.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
-ussdframework = { path = "src" }
+# ussdframework = { path = "." }
