--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -10,6 +10,8 @@ path = "basic_usage.rs"
 
 [dependencies]
 ussdframework = { path = "../" }  # Link to the local ussdframework directory
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 # Redis client library
 # redis = "0.24.0"
 # HTTP server library
