--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ config = "0.14.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+actix-web = "4.0"
