--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ path = "src/lib.rs"
 crate-type = ["lib"]
 
 [dependencies]
+actix-web = "4.0"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.14.0"
+lazy_static = "1.4.0"
+rustc_tools_util = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
-actix-web = "4.0"
