--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ actix-web = "4.0"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.14.0"
 lazy_static = "1.4.0"
-rustc_tools_util = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+regex = "1.5.4"
