optional features for menu builder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,14 @@ crate-type = ["lib"]
 actix-web = "4.0"
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.14.0"
+diesel = { version = "2.1.4", features = ["postgres", "r2d2"], optional = true }
+dotenv = { version = "0.15.0", optional = true }
 lazy_static = "1.4.0"
+postgres = { version = "0.19.0", optional = true }
 regex = "1.5.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+
+[features]
+menubuilder = ["postgres", "diesel", "dotenv"]
