--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -9,7 +9,7 @@ name = "basic_usage"
 path = "basic_usage.rs"
 
 [dependencies]
-ussdframework = { path = "../" }  # Link to the local ussdframework directory
+ussdframework = { path = "../", features = ["menubuilder"] }  # Link to the local ussdframework directory
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # Redis client library
