--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,19 +16,28 @@ name = "main"
 path = "src/main.rs"
 
 [dependencies]
+
+# actix
 actix-files = "0.6.5"
 actix-web = "4.0"
+
+# helpers
 chrono = { version = "0.4", features = ["serde"] }
 config = "0.14.0"
-diesel = { version = "2.1.4", features = ["sqlite", "r2d2"], optional = false }
-dotenv = { version = "0.15.0", optional = false }
 lazy_static = "1.4.0"
-postgres = { version = "0.19.0", optional = false }
 regex = "1.5.4"
+
+# serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+# async
 tokio = { version = "1.0", features = ["full"] }
 
+# feature dependencies
+diesel = { version = "2.1.4", features = ["sqlite", "r2d2"], optional = false }
+dotenv = { version = "0.15.0", optional = false }
+
 [features]
-# menubuilder = ["postgres", "diesel", "dotenv"]
+# menubuilder = ["diesel", "dotenv"]
 menubuilder = []
