migrations for the database

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,9 @@ tokio = { version = "1.0", features = ["full"] }
 
 # feature dependencies // change to optional for build
 diesel = { version = "2.1.4", features = ["sqlite", "r2d2"], optional = false }
+diesel_migrations = { version = "2.1.0", optional = false }
 dotenv = { version = "0.15.0", optional = false }
 
 [features]
-# menubuilder = ["diesel", "dotenv"] // uncomment to enable feature
+# menubuilder = ["diesel", "diesel_migrations", "dotenv"] // uncomment to enable feature
 menubuilder = []
