--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ cargo-make = "0.37.12"
 # web framework
 actix-files = "0.6.5"
 actix-web = "4.0"
+actix-multipart = "0.6.1"
+futures-util = "0.3.17"
 
 # helpers
 chrono = { version = "0.4", features = ["serde"] }
