--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,12 @@ cargo-make = "0.37.12"
 
 [dependencies]
 # web framework
+openssl = "0.10.38"
 actix-files = "0.6.5"
 actix-web = "4.0"
 actix-multipart = "0.6.1"
 futures-util = "0.3.17"
+awc = { version = "3.0.0-beta.11", features = [ "openssl" ] }
 
 # helpers
 chrono = { version = "0.4", features = ["serde"] }
