--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "next": "14.1.3",
+    "reactflow": "11.10.4"
   },
   "devDependencies": {
     "typescript": "^5",
